--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 RSS: false
 zhihu_username:     hzh246018
 github_username:    hzh246018
-jianshu_username:   初九cj
+jianshu_username:   84482483fc17
 
 
 
