--- a/_config.yml
+++ b/_config.yml
@@ -59,8 +59,8 @@ kramdown:
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
+  clientID: 20368832be102a2caad7                            #生成的clientID
+  clientSecret: a9b247b9971b7d2c6f30a2bc6972e757447449b5    #生成的clientSecret
   repo: hzh246018.github.io    #仓库名称
   owner: hzh246018    #github用户名
   admin: hzh246018
@@ -71,11 +71,11 @@ gitalk:
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: b50bf2b12b5338a1845e33832976fd68
+ba_track_id: 02250e1a3fdb4c96523d2d561b925937
 
 # Google Analytics
-ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
-ga_domain: blog.huangzhenghua.cn               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+#ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
+#ga_domain: blog.huangzhenghua.cn               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
