--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: HZH Blog
+title: 黄正华
 SEOTitle: 黄正华的博客 | HZH Blog
 header-img: img/post-bg-desk.jpg
 email: 695143140@qq.com
@@ -12,7 +12,7 @@ github_repo: "https://github.com/hzh246018/hzh246018.github.io.git" # you code r
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/about-HZH-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
